# facebook-sharp

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  configure.ac  facebook-sharp.build  facebook-sharp.mdp  facebook-sharp.mds
doc/: Makefile.am  Mono.Facebook.source
doc/Mono.Facebook/: Mono.Facebook.xml  index.xml
doc/Mono.Facebook/Mono.Facebook/: Affiliation.xml  Affiliations.xml  Album.xml  AlbumsResponse.xml  AreFriendsResponse.xml  Concentrations.xml  EducationHistory.xml  EducationInfo.xml  Error.xml  Event.xml  EventMemberList.xml  EventMembersResponse.xml  EventsResponse.xml  FacebookParam.xml  FacebookSession.xml  Friend.xml  FriendInfo.xml  FriendsResponse.xml  Group.xml  GroupMemberList.xml  GroupMembersResponse.xml  GroupsResponse.xml  HighSchoolInfo.xml  Location.xml  Me.xml  MeetingFor.xml  MeetingSex.xml  Notification.xml  Notifications.xml  PeopleList.xml  Photo.xml  PhotoTagsResponse.xml  PhotosResponse.xml  SessionInfo.xml  SessionWrapper.xml  Status.xml  Tag.xml  User.xml  UserInfoResponse.xml  Util.xml  (+2 more)
examples/: GetAlbums.cs  GetEvents.cs  GetFriends.cs  GetUser.cs  InfiniteSession.cs  Makefile.am
examples/WeatherSharp/: Default.aspx  Default.aspx.cs  FBDefault.aspx  FBDefault.aspx.cs  WeatherService.cs  WeatherSharp.mdp  WeatherSharp.mds  WeatherWebService.cs  Web.Config  weather.build  weathersharp.css
src/: Makefile.am  mono-facebook.pc.in
src/Mono.Facebook/: .Util.cs.swp  Album.cs  AssemblyInfo.cs.in  FacebookException.cs  FacebookParam.cs  FacebookSession.cs  Location.cs  Photo.cs  Responses.cs  SessionWrapper.cs  Tag.cs  User.cs  Util.cs
src/Mono.Facebook.Platform/: Auth.cs  Data.cs  Enumerations.cs  Events.cs  Exceptions.cs  FBML.cs  FQL.cs  Facebook.cs  Feed.cs  Friends.cs  Groups.cs  NOTES  Notifications.cs  Photos.cs  Profile.cs  UserSession.cs  Users.cs
src/Mono.Facebook.Platform/Responses/: Affiliation.cs  AuthSession.cs  EducationInfo.cs  Location.cs  Status.cs  User.cs
